Add function to save points

--- a/save-load-pts.ipynb
+++ b/save-load-pts.ipynb
@@ -167,12 +167,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pts_layer_name = 'points-0'\n",
     "# Setting ndim to the length of the arange array will ensure that the points \n",
     "# layer is the same size as the image subset stack\n",
     "viewer.add_points(\n",
     "    ndim=len(np.arange(img_start, img_stop, img_step)), \n",
     "    size=5, \n",
-    "    name='Size 5 Points'\n",
+    "    name=pts_layer_name\n",
     ")"
    ]
   },
@@ -181,6 +182,15 @@
    "metadata": {},
    "source": [
     "# Save points to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pts.save(viewer, pts_layer_name, '.')"
    ]
   },
   {
